k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffee-shop
  labels:
    name: coffee-shop
